AirquipUAT/force-app/main/default/objects/Knowledge_Article_Link__c/Knowledge_Article_Link__c.object-meta.xml
<CustomObject>
    <description>Links knowledge articles to any parent record without limiting reuse across records.</description>
    <label>Knowledge Article Link</label>
    <nameField>
        <displayFormat>KAL-{000000}</displayFormat>
        <label>Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Article Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>