AirquipUAT/force-app/main/default/objects/Knowledge_Article_Link__c/fields/Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article__c</fullName>
    <label>Knowledge Article</label>
    <referenceTo>Knowledge_Article__c</referenceTo>
    <relationshipLabel>Knowledge Article Links</relationshipLabel>
    <relationshipName>Knowledge_Article_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>