AirquipUAT/force-app/main/default/objects/Knowledge_Article_Link__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>